<resources>
    <string name="app_name">CS360_App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_icon_description">Menu icon</string>
    <string name="Daily_Weight_Tracker">Daily Weight Tracker</string>
    <string name="your_target_weight">Your Target Weight:</string>
    <string name="blank_target_weight">- - -</string>
    <string name="weight_format">%.1f lbs</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">Cancel</string>
    <string name="enter_weight">Enter weight</string>
    <string name="add_weight_record_title">Add Weight Record</string>
    <string name="enter_date_prompt">Enter date</string>
    <string name="button_to_add_a_new_weight_record">Button to add a new weight record</string>
    <string name="set_your_target_weight">Set your target weight</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="login">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="daily_weight_tracker">Daily Weight Tracker</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_username">Enter username</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_weight_record_title">Edit record</string>
    <string name="current_weight">"Current Weight: "</string>
    <string name="current_date">"Current Date: "</string>
    <string name="save">Save</string>
    <string name="error_empty_weight">Please enter a weight</string>
    <string name="error_invalid_weight">Please enter a valid weight</string>
    <string name="error_negative_weight">Weight must be greater than zero</string>
    <string name="error_future_date">Cannot select future dates</string>
    <string name="settings_title">Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="sms_notifications_will_be_delivered_when_reaching_your_target_weight">SMS Notifications will be delivered when reaching your target weight.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_duplicate_date">A record already exists with this date.</string>
    <string name="delete_record">Delete Record</string>"
    <string name="delete_confirmation">Are you sure you want to delete this?</string>
    <string name="delete"> Delete </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nav_records_title">Records</string>
    <string name="nav_analytics_title">Analytics</string>
    <string name="nav_settings_title">Settings</string>
</resources>