<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_weight_tracker"
            android:gravity="center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginVertical="50dp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/loginErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_username_or_password"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <Button
            android:id="@+id/loginButton"
            style="Reference:	@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/signupButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="75dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>