<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/register_button_bar"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="Create an account"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/phone_number"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/register_layout"
        >

        <Button
            android:id="@+id/registerCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/registerSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/purple"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>