<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/lavendar">
    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_icon"
        android:paddingTop="21dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_icon"
        app:layout_constraintBottom_toTopOf="@id/notification_settings_title"
       />

    <TextView
        android:id="@+id/notification_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_settings"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sms_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="50dp"
        android:switchPadding="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/enable_sms_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_settings_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/sms_notifications_will_be_delivered_when_reaching_your_target_weight"
        app:layout_constraintTop_toBottomOf="@id/sms_notifications_switch"
        android:textSize="12sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
